@@ -2,7 +2,7 @@ Package: kit
 Type: Package
 Title: Data Manipulation Functions Implemented in C
 Version: 0.0.12
-Date: 2022-04-10
+Date: 2022-04-23
 Authors@R: c(person("Morgan", "Jacob", role = c("aut", "cre", "cph"), email = "morgan.emailbox@gmail.com"))
 Author: Morgan Jacob [aut, cre, cph]
 Maintainer: Morgan Jacob <morgan.emailbox@gmail.com>
